--- a/README
+++ b/README
@@ -12,5 +12,8 @@ Source code is written in the draft C/C++, it is open,
 it is possible to change it, enter their amendments 
 and improvements to recompile at its discretion.
 
+ArcTic implemented under the operating system Linux,
+Mac OS, Microsoft and FreeBSD. 
+
 For further information on the ArcTic project, please 
 visit our project web site at <www.github.com/arcticdev>
